# cherry-server

./: .gitignore  Cargo.toml  README.md  example-config.toml
.github/: dependabot.yml
doc/: SETUP-LINUX.md  cherry-server.service
src/: filter.rs  main.rs
src/config/: mod.rs
src/db/: 0001-schema.sql  0002-remove-url-column.sql  mod.rs
src/handlers/: mod.rs
src/handlers/html/: index.html
src/utilities/: file.rs  mod.rs  validation.rs
