[package]
name = "cherry-server"
version = "0.1.0"
edition = "2021"
description = "A media server based on the Blossom protocol"
authors = ["0xtr <oxtrr@protonmail.com>"]
readme = "README.md"
homepage = "https://github.com/0xtrr/cherry-server"
repository = "https://github.com/0xtrr/cherry-server"
license = "MIT"
keywords = ["blossom", "server"]

[dependencies]
axum = { version = "0.7.5", features = ["multipart"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.1", features = ["full", "test-util"] }
tower-http = { version = "0.6.1", features = ["cors"] }
chrono = "0.4.38"
sha2 = "0.10.8"
hex = "0.4.3"
base64 = "0.22.1"
async-trait = "0.1.83"
sqlx = { version = "0.8.2", features = ["runtime-tokio-rustls", "sqlite", "macros"] }
toml = "0.8.19"
reqwest = { version = "0.12.9", features = ["json"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }
clap = { version = "4.5.21", features = ["derive"] }
nostr-sdk = "0.36.0"
http-body-util = "0.1.2"
tempfile = "3.14.0"

[dev-dependencies]
tower = { version = "0.5.1", features = ["util"] }
